# python-tdd-example

./: .gitignore  .pdm-python  README.md  a.out  folder_structure.txt  pyproject.toml  requirements.txt  test.py
app/: application.py  entities.py  ms.py  sql.py  value.py
app/adjececy_list_relationship/: entities.py
app/adjececy_list_relationship/tests/: conftest.py  test_adjeceny_relation.py
app/many_to_mant_association/: entities.py
app/many_to_mant_association/tests/: conftest.py  test_association_table_orm_mapping.py  test_many_to_many_associate_relationship_mapping.py
app/many_to_many/: entities.py
app/many_to_many/tests/: conftest.py  test_many_to_many_relationship_mapping.py
app/many_to_many_association/tests/: conftest.py  test_association_table_orm_mapping.py
app/objects_to_jsonb_examples/: entities.py
app/objects_to_jsonb_examples/tests/: conftest.py  test_jsonb_mapping.py
app/one_to_many/: entities.py
app/one_to_many/tests/: conftest.py  test_orm_mapping_many_to_many.py
app/one_to_one/: composite.py  entities.py
app/one_to_one/tests/: conftest.py  test_orm_mapping.py  test_orm_mapping_on_to_one.py
tests/: conftest.py  test_allocation.py  test_database.py  test_models.py  test_orm_mapping.py
